# cpcam

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  README.md  build.gradle.kts  crowdin.yml  detekt.yml  gradle.properties  keystore_base.properties  settings.gradle.kts
app/: build.gradle.kts
benchmarks/macro/: build.gradle.kts
benchmarks/micro/: build.gradle.kts
build-logic/: build.gradle.kts  settings.gradle.kts
config/libraries/: native.json
config/licenses/: LGPL-2.1-or-later.json
core/audio/: build.gradle.kts
core/camera/: build.gradle.kts
core/camera-ui/: build.gradle.kts
core/common/: build.gradle.kts
core/data/: build.gradle.kts  proguard-rules.pro
core/device/: build.gradle.kts
core/endpoint/: build.gradle.kts
core/stream/: build.gradle.kts  proguard-rules.pro
core/stream/src/main/cpp/: CMakeLists.txt  FFmpegUtils.cpp  FFmpegUtils.h  Format.h  JniUtils.cpp  JniUtils.h  Log.h  PixFmt.h  StreamConfig.cpp  StreamConfig.h  StreamError.h  VideoConfig.cpp  VideoConfig.h
core/stream/src/main/cpp/cmake/: FindFFmpeg.cmake  FindMbedTLS.cmake  export.map
core/stream/src/main/cpp/output/: FFmpegOutput.cpp  FFmpegOutput.h  FFmpegOutput_jni.cpp
core/stream/src/main/cpp/stream/: FFmpegAudioStream.cpp  FFmpegAudioStream.h  FFmpegAudioStream_jni.cpp  FFmpegVideoStream.cpp  FFmpegVideoStream.h  FFmpegVideoStream_jni.cpp  FrameData.h  StreamData.h
core/ui/: build.gradle.kts
feature/about/: build.gradle.kts
feature/main/: build.gradle.kts
feature/scanner/: build.gradle.kts
feature/service/: build.gradle.kts
feature/settings/: build.gradle.kts
gradle/: libs.versions.toml
jni_deps/: CMakeLists.txt  README.md  run.sh
jni_deps/cmake/: BuildFFmpeg.cmake  (+1 more)
(+286 files in other folders)
